# parsnp

./: CMakeCache.txt  CMakeLists.txt  Makefile  Parsnp.py  cmake_install.cmake  configure  ft  harvest  nucmer  parsnp  parsnp.cbp  penmp  phiprofile  show-coords
autom4te.cache/: output.0  requests  traces.0
examples/mers_virus/genomes/: Jeddah_2014_C7149.fna  Jeddah_2014_C7569.fna
mers/testmers49/: ._Buraidah_1_2013.fna  ._Indiana-USA-1_Saudi_Arabia_2014.fna  ._KSA-CAMEL-363.fna  ._KSA-CAMEL-376.fna  ._KSA-CAMEL-378.fna  ._KSA-CAMEL-503.fna  ._KSA-CAMEL-505.fna  Jeddah_2014_C7770.fna
mers/testref/: EMC_2012.gbk.cat  EMC_2012.gbk.fna
muscle/: Makefile  config.status  libtool
muscle/libMUSCLE/: Makefile  libMUSCLE-3.7.la  libMUSCLE_3_7_la-aligngivenpath.lo  libMUSCLE_3_7_la-aligngivenpathsw.lo  libMUSCLE_3_7_la-aligntwomsas.lo  libMUSCLE_3_7_la-aligntwoprofs.lo  libMUSCLE_3_7_la-aln.lo  libMUSCLE_3_7_la-alpha.lo  libMUSCLE_3_7_la-anchoredpp.lo  libMUSCLE_3_7_la-anchors.lo  libMUSCLE_3_7_la-bittraceback.lo  libMUSCLE_3_7_la-blosum62.lo  libMUSCLE_3_7_la-blosumla.lo  libMUSCLE_3_7_la-clust.lo  libMUSCLE_3_7_la-cluster.lo  libMUSCLE_3_7_la-clwwt.lo  libMUSCLE_3_7_la-color.lo  libMUSCLE_3_7_la-cons.lo  libMUSCLE_3_7_la-diaglist.lo  libMUSCLE_3_7_la-diffobjscore.lo  libMUSCLE_3_7_la-diffpaths.lo  libMUSCLE_3_7_la-difftrees.lo  libMUSCLE_3_7_la-difftreese.lo  libMUSCLE_3_7_la-distcalc.lo  libMUSCLE_3_7_la-distfunc.lo  libMUSCLE_3_7_la-distpwkimura.lo  libMUSCLE_3_7_la-domuscle.lo  libMUSCLE_3_7_la-dosp.lo  libMUSCLE_3_7_la-dpreglist.lo  libMUSCLE_3_7_la-drawtree.lo  libMUSCLE_3_7_la-edgelist.lo  libMUSCLE_3_7_la-enumopts.lo  libMUSCLE_3_7_la-enumtostr.lo  libMUSCLE_3_7_la-estring.lo  libMUSCLE_3_7_la-fasta.lo  libMUSCLE_3_7_la-fasta2.lo  libMUSCLE_3_7_la-fastclust.lo  libMUSCLE_3_7_la-fastdist.lo  libMUSCLE_3_7_la-fastdistjones.lo  libMUSCLE_3_7_la-fastdistkbit.lo  (+112 more)
muscle/libMUSCLE/.deps/: libMUSCLE_3_7_la-aligngivenpath.Plo  libMUSCLE_3_7_la-aligngivenpathsw.Plo  libMUSCLE_3_7_la-aligntwomsas.Plo  libMUSCLE_3_7_la-aligntwoprofs.Plo  libMUSCLE_3_7_la-aln.Plo  libMUSCLE_3_7_la-alpha.Plo  libMUSCLE_3_7_la-anchoredpp.Plo  libMUSCLE_3_7_la-anchors.Plo  libMUSCLE_3_7_la-bittraceback.Plo  libMUSCLE_3_7_la-blosum62.Plo  libMUSCLE_3_7_la-blosumla.Plo  libMUSCLE_3_7_la-clust.Plo  libMUSCLE_3_7_la-cluster.Plo  libMUSCLE_3_7_la-clwwt.Plo  libMUSCLE_3_7_la-color.Plo  libMUSCLE_3_7_la-cons.Plo  libMUSCLE_3_7_la-diaglist.Plo  libMUSCLE_3_7_la-diffobjscore.Plo  libMUSCLE_3_7_la-diffpaths.Plo  libMUSCLE_3_7_la-difftrees.Plo  libMUSCLE_3_7_la-difftreese.Plo  libMUSCLE_3_7_la-distcalc.Plo  libMUSCLE_3_7_la-distfunc.Plo  libMUSCLE_3_7_la-distpwkimura.Plo  libMUSCLE_3_7_la-domuscle.Plo  libMUSCLE_3_7_la-dosp.Plo  libMUSCLE_3_7_la-dpreglist.Plo  libMUSCLE_3_7_la-drawtree.Plo  libMUSCLE_3_7_la-edgelist.Plo  libMUSCLE_3_7_la-enumopts.Plo  libMUSCLE_3_7_la-enumtostr.Plo  libMUSCLE_3_7_la-estring.Plo  libMUSCLE_3_7_la-fasta.Plo  libMUSCLE_3_7_la-fasta2.Plo  libMUSCLE_3_7_la-fastclust.Plo  libMUSCLE_3_7_la-fastdist.Plo  libMUSCLE_3_7_la-fastdistjones.Plo  libMUSCLE_3_7_la-fastdistkbit.Plo  libMUSCLE_3_7_la-fastdistkmer.Plo  libMUSCLE_3_7_la-fastdistmafft.Plo  (+106 more)
muscle/libMUSCLE/.libs/: libMUSCLE-3.7.1.dylib  libMUSCLE-3.7.dylib  libMUSCLE-3.7.la  libMUSCLE-3.7.lai  muscle
parsnp.dSYM/Contents/: Info.plist
parsnp.dSYM/Contents/Resources/DWARF/: parsnp
src/: parsnp.cpp  parsnp.hh
src/csgmum/: csg.c  csg.h  mum.c  mum.h
